--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "cheerio": "^0.19.0",
+    "easy-table": "^0.3.0",
     "fs-promise": "^0.3.1",
     "promise": "^6.1.0",
     "request-promise": "^0.4.1"
